# Tramscan.github.io

./: CNAME  README.md  _config.yml  _headers  index.html  shared.css  style.css
blog/: index.html  post1.html  post2.html
fonts/sanfran/: .uuid
interactive-robotics/: interactive-robotics.html
interactive-robotics/bird-view/: bird-view.js
interactive-robotics/counter/: Cargo.toml  counter.html
interactive-robotics/counter/src/: lib.rs  main.rs
interactive-robotics/pendulum/: index.html  pendulum.js
interactive-robotics/three-body/: three-body.js
portfolio/: biped-simulation.html  draper-work.html  dynamometer.html  furuta-simulation.html  gearbox-design.html  hip-exoskeleton.html  index.html  portfolio-styles.css
publications/: index.html
resume/: index.html
