[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.24.0"
eframe = { version = "0.24.0", default-features = false, features = [
    "glow",
    "default_fonts",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
